Optimized BlockList